	PR debug/77363 	* dwarf2out.c (modified_type_die): Use lookup_type_die (type) 	instead of lookup_type_die (type_main_variant (type)) even for array 	types.

* g++.dg/debug/dwarf2/pr77363.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@239855 138bc75d-0d04-0410-961f-82ee72b054a4